start working on projects

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ permalink:        pretty
 # Setup
 title:            Oded Welgreen
 tagline:          'A Jekyll theme'
-description:      'A developer, a gamer and a musician.'
+description:      'A developer, a gamer, a musician and a father.'
 url:              http://www.odedwelgreen.com
 
 author:
