--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,5 +1,6 @@
 -   name: Game of Music
     image: /images/gameofmusic.gif
+    gfycat: CalmCornyFinnishspitz
     repo: https://github.com/odedw/game-of-music
     link: http://gameofmusic.odedwelgreen.com
     music: 
@@ -8,6 +9,7 @@
 
 -   name: Super Fantasy Queue
     image: /images/sfq.gif
+    gfycat: AlertEagerCrocodile
     repo: https://github.com/odedw/super-fantasy-queue
     link: http://sfq.odedwelgreen.com
     music: https://soundcloud.com/injagames/sets/super-fantasy-queue
@@ -18,6 +20,7 @@
     image: /images/caseit.gif
     repo: https://github.com/odedw/caseit
     link: http://caseit.odedwelgreen.com
+    gfycat: WeeklyScornfulArgentinehornedfrog
     music: 
     video:
     description: A simple web tool for text transformations designed to work with keyboard shortcuts.
