--- a/_data/music.yml
+++ b/_data/music.yml
@@ -1,3 +1,7 @@
+-   name: ISHIM - New Things
+    description: 
+    type: youtube
+    embed: [Z9d-GqC2EJA]
 -   name: Super Fantasy Queue
     description: Written for Github's 2013 game-off, <a href="http://sfq.odedwelgreen.com" target="_blank">Super Fantasy Queue</a>'s music has a 16-bit kind of feel to it. Created with Cubase, using Tweakbench's <a href="" target="_blank">Peach</a> VST.
     type: soundcloud
