Add Karcero back

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -7,6 +7,16 @@
     video:
     description: A searchable map of Thedas - the Dragon Age world.
     cta: use it
+    
+-   name: Karcero
+    image: /images/caseit.gif
+    repo: https://github.com/odedw/karcero
+    link: http://www.odedwelgreen.com/karcero
+    gfycat: SerenePoliticalAntarcticgiantpetrel
+    music: 
+    video:
+    description: A procedural dungeon tile based map generator.
+    cta: use it
 
 -   name: Game of Music
     image: /images/gameofmusic.gif
