--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
     "type": "git",
     "url": "https://github.com/odedw/odedw.github.io.git"
   },
-  "author": "Oded Welgreen",  
+  "author": "Oded Welgreen",
   "bugs": {
     "url": "https://github.com/odedw/odedw.github.io/issues"
   },
   "homepage": "https://github.com/odedw/odedw.github.io",
-    "devDependencies": {  
-          "grunt" :                       "~0.4.*",  
-          "grunt-contrib-cssmin":         "*",  
-          "grunt-contrib-uglify":         "*",  
-          "matchdep":                     "*"  
-  }  
+  "devDependencies": {
+    "grunt": "~0.4.*",
+    "grunt-contrib-cssmin": "*",
+    "grunt-contrib-uglify": "*",
+    "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-less": "^3.0.3",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-watch": "^4.3.5",
+    "matchdep": "*"
+  }
 }
