--- a/_config.yml
+++ b/_config.yml
@@ -22,3 +22,5 @@ version:          2.0.0
 
 github:
   repo:           https://github.com/poole/lanyon
+
+exclude: [node_modules, styles, gulpfile.js, package.json]
