--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-less": "^3.0.3",
     "gulp-minify-css": "^1.2.1",
+    "gulp-uglify": "^1.4.1",
     "gulp-watch": "^4.3.5",
     "matchdep": "*"
   }
