build into a folder and make that the source for jekyll

--- a/_config.yml
+++ b/_config.yml
@@ -23,4 +23,6 @@ version:          2.0.0
 github:
   repo:           https://github.com/poole/lanyon
 
+#paths
+source : build
 exclude: [node_modules, styles, scripts, gulpfile.js, package.json]
