--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "homepage": "https://github.com/odedw/odedw.github.io",
   "devDependencies": {
+    "browser-sync": "^2.9.8",
     "event-stream": "^3.3.1",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
