--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,3 +1,12 @@
+-   name: Cellular Automata Playground
+    repo: https://github.com/odedw/cellular-automata-playground
+    link: https://bit.ly/cellular-automata
+    gfycat: SarcasticSparseCurassow
+    music: 
+    video: https://www.youtube.com/watch?v=ICpImf7Y3pc
+    description: A tool to explore life-like cellular automata.
+    cta: use it
+    
 -   name: TempoGDX
     repo: https://github.com/odedw/TempoGDX
     link: https://play.google.com/store/apps/details?id=com.inja.tempogdx
