--- a/_data/music.yml
+++ b/_data/music.yml
@@ -2,6 +2,10 @@
     description: 
     type: youtube
     embed: [N4bPsMeur8E,UKQRVnt9M1I]
+-   name: Electronic Music
+    description:
+    type: youtube
+    embed: [ICpImf7Y3pc]    
 -   name: ISHIM
     description: 
     type: youtube
