--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,7 +1,7 @@
 -   name: Cellular Automata Playground
     repo: https://github.com/odedw/cellular-automata-playground
     link: https://bit.ly/cellular-automata
-    gfycat: SarcasticSparseCurassow
+    gfycat: DefiantSpitefulGalapagosdove
     music: 
     video: https://www.youtube.com/watch?v=ICpImf7Y3pc
     description: A tool to explore life-like cellular automata.
