--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ url:              http://www.odedwelgreen.com
 
 author:
   name:           'Oded Welgreen'
-  url:            https://twitter.com/InjaGames
+  url:            https://twitter.com/InjaLab
 
 paginate:         5
 
