--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
-  "name": "odedw.github.io",
+  "name": "gatsby-starter-default",
+  "description": "Gatsby default starter",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "dependencies": {
+    "gatsby": "^1.9.247",
+    "gatsby-link": "^1.6.40",
+    "gatsby-plugin-react-helmet": "^2.0.10",
+    "gatsby-plugin-styled-components": "^2.0.11",
+    "react-helmet": "^5.2.0",
+    "styled-components": "^3.3.3"
+  },
+  "keywords": [
+    "gatsby"
+  ],
+  "license": "MIT",
   "scripts": {
+    "build": "gatsby build",
+    "develop": "gatsby develop",
+    "format": "prettier --write 'src/**/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "prettier": "^1.12.0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/odedw/odedw.github.io.git"
-  },
-  "author": "Oded Welgreen",
-  "bugs": {
-    "url": "https://github.com/odedw/odedw.github.io/issues"
-  },
-  "homepage": "https://github.com/odedw/odedw.github.io",
-  "devDependencies": {
-    "browser-sync": "^2.9.8",
-    "event-stream": "^3.3.1",
-    "gulp": "^3.9.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-ignore": "^2.0.1",
-    "gulp-less": "^3.0.3",
-    "gulp-minify-css": "^1.2.1",
-    "gulp-uglify": "^1.4.1",
-    "gulp-watch": "^4.3.5",
-    "matchdep": "*"
+    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
   }
 }
