--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "gatsby-link": "^1.6.40",
     "gatsby-plugin-react-helmet": "^2.0.10",
     "gatsby-plugin-styled-components": "^2.0.11",
+    "gatsby-plugin-typography": "^1.7.19",
     "react-helmet": "^5.2.0",
-    "styled-components": "^3.3.3"
+    "react-typography": "^0.16.13",
+    "styled-components": "^3.3.3",
+    "typography": "^0.16.17"
   },
   "keywords": [
     "gatsby"
