--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "gatsby-plugin-react-helmet": "^2.0.10",
     "gatsby-plugin-styled-components": "^2.0.11",
     "gatsby-plugin-typography": "^1.7.19",
+    "gatsby-source-filesystem": "^1.5.39",
+    "gatsby-transformer-json": "^1.0.20",
     "react-helmet": "^5.2.0",
     "react-typography": "^0.16.13",
     "styled-components": "^3.3.3",
