--- a/package.json
+++ b/package.json
@@ -1,38 +1,34 @@
 {
-  "name": "gatsby-starter-default",
-  "description": "Gatsby default starter",
-  "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
-  "dependencies": {
-    "@createjs/tweenjs": "^2.0.0-beta.1",
-    "createjs-easeljs": "^0.8.2",
-    "gatsby": "^1.9.247",
-    "gatsby-link": "^1.6.40",
-    "gatsby-plugin-react-helmet": "^2.0.10",
-    "gatsby-plugin-styled-components": "^2.0.11",
-    "gatsby-plugin-typography": "^1.7.19",
-    "gatsby-source-filesystem": "^1.5.39",
-    "gatsby-transformer-json": "^1.0.20",
-    "react-helmet": "^5.2.0",
-    "react-typography": "^0.16.13",
-    "styled-components": "^3.3.3",
-    "typography": "^0.16.17"
-  },
-  "keywords": [
-    "gatsby"
-  ],
-  "license": "MIT",
-  "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write 'src/**/*.js'",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "devDependencies": {
-    "prettier": "^1.12.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-  }
+    "name": "gatsby-starter-default",
+    "description": "Gatsby default starter",
+    "version": "1.0.0",
+    "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+    "dependencies": {
+        "gatsby": "^1.9.247",
+        "gatsby-link": "^1.6.40",
+        "gatsby-plugin-react-helmet": "^2.0.10",
+        "gatsby-plugin-styled-components": "^2.0.11",
+        "gatsby-plugin-typography": "^1.7.19",
+        "gatsby-source-filesystem": "^1.5.39",
+        "gatsby-transformer-json": "^1.0.20",
+        "react-helmet": "^5.2.0",
+        "react-typography": "^0.16.13",
+        "styled-components": "^3.3.3",
+        "typography": "^0.16.17"
+    },
+    "keywords": [ "gatsby" ],
+    "license": "MIT",
+    "scripts": {
+        "build": "gatsby build",
+        "develop": "gatsby develop",
+        "format": "prettier --write 'src/**/*.js'",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "devDependencies": {
+        "prettier": "^1.12.0"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    }
 }
