--- a/package.json
+++ b/package.json
@@ -4,27 +4,30 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next",
+    "build": "next build",
+    "start": "next start",
+    "export": "next export"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/odedw/odedw.github.io.git"
+    "url": "git+https://github.com/odedw/odedw.github.io.git"
   },
-  "author": "Oded Welgreen",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/odedw/odedw.github.io/issues"
   },
-  "homepage": "https://github.com/odedw/odedw.github.io",
+  "homepage": "https://github.com/odedw/odedw.github.io#readme",
+  "dependencies": {
+    "next": "^9.1.1",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2"
+  },
   "devDependencies": {
-    "browser-sync": "^2.9.8",
-    "event-stream": "^3.3.1",
-    "gulp": "^3.9.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-ignore": "^2.0.1",
-    "gulp-less": "^3.0.3",
-    "gulp-minify-css": "^1.2.1",
-    "gulp-uglify": "^1.4.1",
-    "gulp-watch": "^4.3.5",
-    "matchdep": "*"
+    "@types/node": "^12.11.2",
+    "@types/react": "^16.9.9",
+    "typescript": "^3.6.4"
   }
 }
