--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "export": "next export"
+    "export": "npm run build && next export"
   },
   "repository": {
     "type": "git",
@@ -23,11 +23,13 @@
   "dependencies": {
     "next": "^9.1.1",
     "react": "^16.10.2",
-    "react-dom": "^16.10.2"
+    "react-dom": "^16.10.2",
+    "styled-components": "^4.4.0"
   },
   "devDependencies": {
     "@types/node": "^12.11.2",
     "@types/react": "^16.9.9",
+    "babel-plugin-styled-components": "^1.10.6",
     "typescript": "^3.6.4"
   }
 }
