--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx @11ty/eleventy",
-    "start":"npx @11ty/eleventy --serve"
+    "clean": "rimraf dist",
+    "serve:webpack": "webpack --mode development --watch",
+    "serve:eleventy": "eleventy --serve",
+    "start": "npm-run-all clean --parallel serve:*",
+    "build:webpack": "webpack --mode production",
+    "build:eleventy": "ELEVENTY_ENV=production eleventy",
+    "build": "run-s clean build:*"
   },
   "repository": {
     "type": "git",
@@ -20,6 +25,18 @@
   },
   "homepage": "https://github.com/odedw/odedw.github.io#readme",
   "devDependencies": {
-    "@11ty/eleventy": "^0.11.1"
+    "@11ty/eleventy": "^0.11.1",
+    "autoprefixer": "^10.1.0",
+    "css-loader": "^5.0.1",
+    "mini-css-extract-plugin": "^1.3.3",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.2.1",
+    "postcss-loader": "^4.1.0",
+    "rimraf": "^3.0.2",
+    "tailwindcss": "^2.0.2",
+    "webpack": "^5.11.0",
+    "webpack-cli": "^4.2.0"
+  },
+  "dependencies": {
   }
 }
