--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "serve:webpack": "webpack --mode development --watch",
     "serve:eleventy": "eleventy --serve",
     "start": "npm-run-all clean --parallel serve:*",
-    "build:webpack": "webpack --mode production",
-    "build:eleventy": "ELEVENTY_ENV=production eleventy",
+    "build:webpack": "set NODE_ENV=production && webpack --mode production",
+    "build:eleventy": "set ELEVENTY_ENV=production && eleventy",
     "build": "run-s clean build:*"
   },
   "repository": {
@@ -26,8 +26,10 @@
   "homepage": "https://github.com/odedw/odedw.github.io#readme",
   "devDependencies": {
     "@11ty/eleventy": "^0.11.1",
+    "@fullhuman/postcss-purgecss": "^3.1.3",
     "autoprefixer": "^10.1.0",
     "css-loader": "^5.0.1",
+    "cssnano": "^4.1.10",
     "mini-css-extract-plugin": "^1.3.3",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.1",
@@ -36,7 +38,5 @@
     "tailwindcss": "^2.0.2",
     "webpack": "^5.11.0",
     "webpack-cli": "^4.2.0"
-  },
-  "dependencies": {
   }
 }
