--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean": "rimraf dist",
     "serve:webpack": "webpack --mode development --watch",
     "serve:eleventy": "eleventy --serve",
-    "start": "npm-run-all clean --parallel serve:*",
+    "start": "set NODE_ENV=development && npm-run-all clean --parallel serve:*",
     "build:webpack": "set NODE_ENV=production && webpack --mode production",
     "build:eleventy": "set ELEVENTY_ENV=production && eleventy",
     "build": "run-s clean build:*"
